<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/contentView"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <com.baidu.mapapi.map.MapView
            android:id="@+id/mapview"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
        </com.baidu.mapapi.map.MapView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/poiList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="80dp"
            android:background="@drawable/bg_poi_list"
            android:visibility="invisible">

        </androidx.recyclerview.widget.RecyclerView>

        <include
            android:id="@+id/poiInfo"
            layout="@layout/layout_poi_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="18dp"
            android:visibility="gone"></include>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/titleBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/color_flow_window">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_weight="6"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_search_bar">
            <TextView
                android:layout_marginLeft="13dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textSize="14dp"
                android:textColor="@color/color_light_gray"
                android:fontFamily="@string/PingFang_SC_Medium"
                android:text="@string/in"/>

            <EditText
                android:id="@+id/city"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:text="@string/defaultCity"
                android:singleLine="true"
                android:background="@null"
                />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textSize="14dp"
                android:textColor="@color/color_light_gray"
                android:fontFamily="@string/PingFang_SC_Medium"
                android:text="@string/search"/>

            <EditText
                android:id="@+id/poi"
                android:layout_marginLeft="10dp"
                android:layout_width="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:singleLine="true"
                android:background="@null"
                />

        </LinearLayout>
        <Button
            android:id="@+id/btn_search"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_search_bar"
            android:layout_weight="4"
            android:textColor="@color/color_white"
            android:layout_gravity="center_vertical"
            android:text="@string/search_poi"
            android:layout_width="80dp"
            android:layout_height="40dp"></Button>
    </LinearLayout>
</RelativeLayout>
